# ADAgentAI

./: .gitignore  CLAUDE.md  GEMINI.md  GITHUB_SETUP.md  README.md  SETUP_GUIDE.md  claude_idea.md  codex_idea.md  development  gemini_flash_idea.md  package.json  pnpm-lock.yaml  prd.md  render.yaml  tmpclaude-329f-cwd
backend/: ADAgentAI_Postman_Collection.json  README.md  admanager_v1_discovery.json  chat_server.py  chat_server_callbacks.py  langgraph.json  pyproject.toml  requirements.txt  run_chat_ui.py  run_mcp.py
backend/ad_platform_crew/: UI_GUIDE.md  __init__.py  __main__.py  cli.py  crew.py  main.py  pyproject.toml  requirements.txt
backend/ad_platform_crew/admob_crew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/ad_platform_crew/agents/: __init__.py  definitions.py
backend/ad_platform_crew/config/: __init__.py  agents.yaml  services.yaml  settings.py  tasks.yaml
backend/ad_platform_crew/factory/: __init__.py  agent_factory.py
backend/ad_platform_crew/flows/: __init__.py  routing_flow.py
backend/ad_platform_crew/tasks/: __init__.py  definitions.py
backend/ad_platform_crew/tools/: __init__.py  admanager_tools.py  admob_tools.py  mcp_client.py
backend/adagent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/admanager_mcp/: .env.example  README.md  __init__.py  __main__.py  api_client.py  constants.py  models.py  server.py  utils.py
backend/admanager_mcp/tools/: __init__.py  adUnitSizes.py  adUnits.py  applications.py  audienceSegments.py  bandwidthGroups.py  browserLanguages.py  browsers.py  cmsMetadataKeys.py  cmsMetadataValues.py  companies.py  contacts.py  content.py  contentBundles.py  contentLabels.py  creativeTemplates.py  customFields.py  customTargetingKeys.py  customTargetingValues.py  deviceCapabilities.py  deviceCategories.py  deviceManufacturers.py  entitySignalsMappings.py  geoTargets.py  get.py  lineItems.py  list.py  liveStreamEvents.py  liveStreamEventsByAssetKey.py  liveStreamEventsByCustomAssetKey.py  mobileCarriers.py  mobileDeviceSubmodels.py  mobileDevices.py  operatingSystemVersions.py  operatingSystems.py  operations.py  orders.py  placements.py  privateAuctionDeals.py  privateAuctions.py  (+8 more)
backend/admob_mcp/: Dockerfile  README.md  __init__.py  __main__.py  api_client.py  constants.py  models.py  render.yaml  requirements.txt  server.py  utils.py
backend/admob_mcp/tools/: __init__.py  accounts.py  ad_sources.py  ad_units.py  apps.py  mediation_groups.py  reports.py
backend/api/: .env.example  GDPR_COMPLIANCE.md  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
backend/api/.husky/: pre-commit
backend/api/api/: index.ts
backend/api/drizzle/: 0000_early_vance_astro.sql
backend/api/drizzle/meta/: 0000_snapshot.json  _journal.json
backend/api/scripts/: check-users.ts  migrate-ad-sources.ts  test-smtp.ts
backend/api/src/: env.ts  index.ts
backend/api/src/db/: index.ts  schema.ts  seed.ts
backend/api/src/e2e/: api.e2e.ts
backend/api/src/lib/: admob-cache.ts  analytics.ts  (+7 more)
backend/api_specs/: admob_v1beta_discovery.json  agent_plan.md  agent_research_2026-01-23.md  applovin.yml  dtexchange.yml  endpoint_audit_2026-01-23.md  inmobi.yml  liftoff.yml  logic_mapping.md  mintegral.yml  pangle.yml  unified_spec_2026-01-24.md  unity.yml  user_journey_2026-01-24.md
backend/chat/: __init__.py  constants.py
backend/chat/adapters/: __init__.py  mediation.py  schema.py
backend/chat/approval/: __init__.py  handlers.py  models.py  schema_extractor.py
backend/chat/crew/: __init__.py  builder.py
backend/chat/graph/: __init__.py  builder.py  state.py  studio.py  validators.py
backend/chat/hooks/: __init__.py  llm_hooks.py  tool_hooks.py
backend/chat/middleware/: __init__.py  cache.py  error.py  rate_limit.py  resolution.py
backend/chat/observability/: __init__.py  metrics.py  tracing.py
backend/chat/routing/: __init__.py  classifier.py
backend/chat/streaming/: __init__.py  events.py  processor.py  state.py
backend/chat/tasks/: __init__.py  background.py
backend/chat/tools/: __init__.py  loader.py  registry.py
backend/chat/utils/: __init__.py  entity_resolver.py  parsing.py  prompts.py  providers.py
backend/mcp_servers/: annotations.py  curated_schemas.py  dependencies.py  server.py  utils.py  visibility.py
backend/mcp_servers/providers/: admanager.py  admob.py  applovin.py  dtexchange.py  inmobi.py  liftoff.py  mintegral.py  pangle.py  unity.py
backend/scripts/: generate_postman_collection.py  push_prompts_to_langsmith.py
backend/shared/: __init__.py  token_service.py
backend/tests/: test_approval.py  verify_all_endpoints.py
(+498 files in other folders)
