[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admob_crew"
version = "1.0.0"
description = "Agentic AdMob Control Plane with MCP"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.98.0",
    "crewai-tools>=0.17.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",  # MCP Python SDK for connecting to MCP servers
]

[tool.crewai]
# CrewAI project configuration
type = "crew"
