[project]
name = "adagentai-backend"
version = "2.0.0"
description = "AI-powered ad monetization assistant with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ADAgentAI Team" }
]
dependencies = [
    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # LangGraph & LangChain (replacing CrewAI)
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",

    # LangSmith observability
    "langsmith>=0.2.0",

    # LLM providers
    "anthropic>=0.40.0",
    "litellm>=1.50.0",

    # Data validation
    "pydantic>=2.0.0",

    # Environment management
    "python-dotenv>=1.0.0",

    # HTTP clients
    "httpx>=0.27.0",
    "requests>=2.32.0",

    # Google Auth (for service account credentials)
    "google-auth>=2.35.0",

    # Database (for PostgresSaver)
    "psycopg[binary,pool]>=3.2.0",

    # MCP SDK for connecting to MCP servers
    "mcp>=1.0.0",

    # LangChain MCP adapters for tool binding
    "langchain-mcp-adapters>=0.1.0",

    # Async support
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat", "ad_platform_crew", "admob_mcp", "admanager_mcp", "shared"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
