[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adagent-backend"
version = "0.1.0"
description = "AD Agent AI Backend"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.0.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sse-starlette>=2.1.3",
    "langchain-mcp-adapters>=0.2.1",
]

[project.optional-dependencies]
studio = [
    "langgraph-cli[inmem]>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chat*", "admob_mcp*", "admanager_mcp*"]
